# comfyui_meshhamer

./: .gitmodules  README.md  __init__.py  config.py  mesh_hamer_detector.py  pyproject.toml
mesh_hamer/: fetch_demo_data.sh  pipline.py  setup.py  vitpose_model.py
mesh_hamer/hamer/configs/: __init__.py  datasets_eval.yaml  datasets_tar.yaml
mesh_hamer/hamer/configs_hydra/: train.yaml
mesh_hamer/hamer/configs_hydra/data/: mix_all.yaml
mesh_hamer/hamer/configs_hydra/data_filtering/: low1.yaml
mesh_hamer/hamer/configs_hydra/experiment/: default.yaml  hamer_vit_transformer.yaml
mesh_hamer/hamer/configs_hydra/launcher/: local.yaml  slurm.yaml
mesh_hamer/hamer/configs_hydra/trainer/: cpu.yaml  ddp.yaml  default.yaml  default_hamer.yaml  gpu.yaml  mps.yaml
mesh_hamer/hamer/datasets/: __init__.py  dataset.py  image_dataset.py  json_dataset.py  mocap_dataset.py  utils.py  vitdet_dataset.py
mesh_hamer/hamer/models/: __init__.py  hamer.py
mesh_hamer/hamer/models/backbones/: __init__.py
mesh_hamer/hamer/models/heads/: __init__.py  mano_head.py
mesh_hamer/hamer/utils/: download.py  pose_utils.py  render_openpose.py  renderer.py  utils_detectron2.py
